# stallgov-evaluation

./: .gitignore  README.md  evaluate_benchmarks.sh  evaluate_perf_counters.sh  frequencies.config.example  openbenchmarking.md  plot-evaluation.py  plot-multiple.sh  plot.sh  setup-openbenchmarking.sh
memutil-bounds-no-de-leon-laptop-nas-benchmarks/: cg.B-1200MHz.txt  cg.B-1400MHz.txt  cg.B-1600MHz.txt  cg.B-2000MHz.txt  cg.B-2200MHz.txt  cg.B-2300MHz.txt  cg.B-2500MHz.txt  cg.B-2600MHz.txt  cg.B-800MHz.txt  cg.B-memutil.txt  ep.B-1800MHz.txt  ep.B-2000MHz.txt  ep.B-2300MHz.txt  ep.B-2600MHz.txt  ep.B-schedutil.txt  ft.B-1200MHz.txt  ft.B-1600MHz.txt  ft.B-2000MHz.txt  ft.B-2200MHz.txt  ft.B-2300MHz.txt  ft.B-2600MHz.txt  ft.B-800MHz.txt  ft.B-schedutil.txt  is.C-1400MHz.txt  is.C-1600MHz.txt  is.C-1800MHz.txt  is.C-2300MHz.txt  is.C-memutil.txt  mg.C-1600MHz.txt  mg.C-2300MHz.txt  mg.C-2600MHz.txt  mg.C-800MHz.txt  mg.C-memutil.txt  mg.C-schedutil.txt
memutil-erik-amd-ipc/: cg.C-1100MHz.txt  cg.C-1300MHz.txt  cg.C-1700MHz.txt  cg.C-2100MHz.txt  cg.C-2300MHz.txt  cg.C-3100MHz.txt  cg.C-3900MHz.txt  cg.C-4300MHz.txt  cg.C-4500MHz.txt  cg.C-500MHz.txt  cg.C-700MHz.txt  cg.C-900MHz.txt  cg.C-schedutil.txt  ep.C-1100MHz.txt  ep.C-1700MHz.txt  ep.C-2100MHz.txt  ep.C-2300MHz.txt  ep.C-3900MHz.txt  ep.C-4700MHz.txt  ep.C-4900MHz.txt  ep.C-500MHz.txt  ep.C-700MHz.txt  ft.C-1300MHz.txt  ft.C-1700MHz.txt  ft.C-2700MHz.txt  ft.C-2900MHz.txt  ft.C-3100MHz.txt  ft.C-3500MHz.txt  ft.C-3700MHz.txt  ft.C-4300MHz.txt  ft.C-4500MHz.txt  (+20 more)
utils/dumb-primes/: CMakeLists.txt  dumb-primes.cpp
(+3824 files in other folders)
